--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/c/index.xhtml
@@ -85,7 +85,7 @@
 								<tr>
 									<td>
 										<!--C4 項目コード/名称(ラベル)-->
-										<div data-bind="ntsFormLabel: {required: true }">#{i18n.getText('CMF002_80')}</div>
+										<div data-bind="ntsFormLabel: {constraint: 'ExternalOutputConditionCode',required: true }">#{i18n.getText('CMF002_80')}</div>
 									</td>
 									<td>
 										<!--C4_1 項目コード--> 
