--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/g/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/g/index.xhtml
@@ -76,7 +76,7 @@
                 <div class="line-height flex">
                     <div>
                         <div class="float_left display_block" style = "padding-right: 50px;"
-                             data-bind="ntsFormLabel: { required:true  }">#{i18n.getText('CMF002_121')}</div>
+                             data-bind="ntsFormLabel: {constraint: 'ConvertCode', required:true  }">#{i18n.getText('CMF002_121')}</div>
                     </div>
                     <div>
                         <input id = "G3_1" type="text" style="width: 30px;" tabindex="6"
