--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/d/index.xhtml
@@ -84,7 +84,7 @@
                         <div style="margin-top: 10px; width: 200px;"
                              data-bind="ntsFormLabel: {}">#{i18n.getText('QMM031_26')}</div>
                         <!-- D3_4 -->
-                        <div class="limited-label" data-bind="text: viewName" style="width: 200px;"></div>
+                        <div class="label" data-bind="text: viewName" style="width: 200px;"></div>
                     </div>
                 </div>
                 <!-- D3_5 -->
