--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/index.xhtml
@@ -71,7 +71,7 @@
                                 dataSource: salIndAmountNames,
                                 columns: [
                                     {key:'index', length: 0, hidden: true},
-                                    {headerText: '#{i18n.getText('QMM039_13')}', key:'individualPriceCode', length: 3},
+                                    {headerText: '#{i18n.getText('QMM039_13')}', key:'individualPriceCode', length: 3, width: 70},
                                     {headerText: '#{i18n.getText('QMM039_14')}', key: 'individualPriceName', length: 3, formatter: _.escape}
                                 ],
                                 value: salIndAmountNamesSelectedCode,
