fix bug #102878 KAF022 (cập nhật tài liệu ver44)

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
@@ -32,11 +32,7 @@ td div {
 }
 
 .a17 .ntsRadioBox span.label {
-	padding-right: 169px;
-}
-
-#a17_7>label:nth-child(2) {
-	margin-left: 17px;
+	width: 205px;
 }
 
 .a6_text {
