Code màn A, B, C QMM019

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/index.xhtml
@@ -60,10 +60,10 @@
                         <div class="valign-center control-group">
                             <!-- 履歴追加 -->
                             <button id="A2_5" tabindex="9" class=""
-                                    data-bind="click: addHistory, enable: true">#{i18n.getText('QMM019_11')}</button>
+                                    data-bind="click: addHistory, enable: !statementLayoutHistData().checkCreate()">#{i18n.getText('QMM019_11')}</button>
                             <!-- 履歴編集 -->
                             <button id="A2_6" tabindex="10" class=""
-                                    data-bind="click: editHistory, enable: true">#{i18n.getText('QMM019_12')}</button>
+                                    data-bind="click: editHistory, enable: !statementLayoutHistData().checkCreate()">#{i18n.getText('QMM019_12')}</button>
                         </div>
                         <!-- 明細書レイアウト一覧 -->
                         <table id="treegrid1" tabindex="11"
@@ -146,7 +146,7 @@
                                             <div class="item-sort" data-bind="ntsSortable: {
                                                                         data: listSetByItem,
                                                                         isEnabled: true }">
-                                                <div class="item" data-bind="
+                                                <div class="item limited-label" data-bind="
                                                                     text: shortName,
                                                                     click: openSetting,
                                                                     css: id,
@@ -178,7 +178,7 @@
                                             <div class="item-sort" data-bind="ntsSortable: {
                                                                         data: listSetByItem,
                                                                         isEnabled: true }">
-                                                <div class="item" data-bind="
+                                                <div class="item limited-label" data-bind="
                                                                     text: shortName,
                                                                     click: openSetting,
                                                                     css: id,
@@ -215,7 +215,7 @@
                                                 <div class="item-sort" data-bind="ntsSortable: {
                                                                             data: listSetByItem,
                                                                             isEnabled: true }">
-                                                    <div class="item" data-bind="
+                                                    <div class="item limited-label" data-bind="
                                                                         text: shortName,
                                                                         click: openSetting,
                                                                         css: id,
@@ -256,7 +256,7 @@
                                                 <div class="item-sort" data-bind="ntsSortable: {
                                                                             data: listSetByItem,
                                                                             isEnabled: true }">
-                                                    <div class="item" data-bind="
+                                                    <div class="item limited-label" data-bind="
                                                                         text: shortName,
                                                                         click: openSetting,
                                                                         css: id,
