--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
@@ -82,13 +82,13 @@
                 </div>
                 <div class="cell valign-center">
                     <!--H1_10-->
-                    <input id="H1_10" tabindex="3" data-bind="ntsTextEditor: {
+                    <input id="H1_10" class="check-validate" tabindex="3" data-bind="ntsTextEditor: {
                         name: '#[QMM019_15]',
                         value: statementCode,
                         constraint: 'StatementCode',
                         required: true }"/>
                     <!--H1_11-->
-                    <input tabindex="4" data-bind="ntsTextEditor: {
+                    <input id="H1_11" class="check-validate" tabindex="4" data-bind="ntsTextEditor: {
                         name: '#[QMM019_16]',
                         value: statementName,
                         constraint: 'StatementName',
