--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
@@ -29,7 +29,7 @@
 				<button type="button" class="proceed" data-bind="" tabindex="1">#{i18n.getText('A1_001')}</button>
 				<button type="button" data-bind="" tabindex="2">#{i18n.getText('A1_002')}</button>
 				<button type="button" class="danger" data-bind="" tabindex="3">#{i18n.getText('A1_003')}</button>
-				<button type="button" data-bind="" tabindex="3">#{i18n.getText('A1_004')}</button>
+				<button type="button" data-bind="click: openBDialog" tabindex="3">#{i18n.getText('A1_004')}</button>
 			</div>
 			<div id="contents-area" class="cf"
 				data-bind="let: { 
