--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/b/cps003.b.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/b/cps003.b.style.css
@@ -1,23 +1,8 @@
-#contents-area {
-	height: auto !important;
+.distance{
+	margin-bottom: 5px;
 }
 
-#contents-area .swap-list-updown-contaier>div {
-	display: inline-block;
-}
-
-.form-group {
-	margin-bottom: 15px;
-}
-
-.form-group.two-cols>div:nth-child(2) {
-	margin-left: 140px;
-}
-
-.nts-searchbbox-wrapper {
-	margin-bottom: 0;
-}
-
-#swap-list-search-area-input {
-	width: 150px !important;
+.margin-right-FormLabel{
+	margin-right: 10px;
+	width: 120px;
 }
