add basedate, category and ccg001 to cps003

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
@@ -38,6 +38,10 @@
 	z-index: 9;
 }
 
+.data-layout .form-group.configs-bar {
+	padding-left: 125px;
+}
+
 .data-layout .layout-multi-control {
 	z-index: 0;
 	margin-top: -60px;
