--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/014/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/014/a/index.xhtml
@@ -34,6 +34,7 @@
 				<button id="A_BTN_004" tabindex="4"
 					data-bind="click: deleteClassification , enable: enableDelete"
 					class="danger btnStyle">#{i18n.getText('CMM014_4')}</button>
+				<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button> 
 
 			</div>
 
