Add refer button

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -5487,6 +5487,12 @@ div .ex-area-line.x-stay {
   padding: 3px;
 }
 
+/* line 474, ../sass/components/_mgrid.scss */
+.mgrid-refer-text {
+  display: inline-block;
+  margin-left: 10px;
+}
+
 /* line 1, ../sass/frame/_header.scss */
 #header {
   background-color: #ccc;
