--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/m/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/m/index.xhtml
@@ -166,7 +166,7 @@
 								value: nextDayOutputMethod,
 								optionsText: 'name',
 								editable: false,
-								enable: $vm.enableFormatSelectionCls(),
+								enable: $vm.enableSelectTimeCls(),
 								required: $vm.enableRequired(),
 								selectFirstIfNull : false,
 								columns: [
