[MasterList - CAS009] Update

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/009/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/009/a/index.xhtml
@@ -36,6 +36,9 @@
 					<button id="delete"
 						data-bind="click: $vm.remove, enable: !!ko.toJS($vm.selectedRole.roleId)"
 						class="danger" tabindex="3">#{i18n.getText('CAS009_5')}</button>
+					<button id="export"
+							data-bind="click: $vm.exportExcel"
+							class="danger" tabindex="3">#{i18n.getText('CAS009_5')}</button>
 					<button id="reference"
 						data-bind="enable: $vm.enableDetail, click: $vm.openDialog"
 						tabindex="4">#{i18n.getText('CAS009_6')}</button>
